--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,20 @@ header {
 }
 
 .nav-logo {
-  position: absolute;
-  left: 100px;
-  top: 50%;
-  transform: translateY(-50%);
+	position: absolute;
+	left: 5%;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
-.nav-logo img {
+@media (min-width: 839px) {
+	.nav-logo {
+	  left: 100px;
+	}
+}
+
+.nav-logo a img {
   height: 50px;
-  display: inline-block;
   vertical-align: middle;
 }
 
@@ -81,7 +86,7 @@ nav {
   display: none;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 840px) {
 	nav {
 		display: block;
 		position: absolute;
@@ -91,7 +96,27 @@ nav {
 	}
 }
 
+#menu-links {
+	background-color: #00B1E3;
+	position: absolute;
+	bottom: -60%;
+	z-index: 2;
+	width: 100%;
+	text-align: center;
+	padding: 10px 0;
+}
+
+@media (min-width: 840px) {
+	#menu-links {
+		background-color: transparent;
+		width: auto;
+		padding: 0;
+		bottom: auto;
+	}
+}
+
 nav a {
+	display: inline-block;
   color: white;
   text-transform: uppercase;
   margin: 0 5px;
@@ -105,6 +130,22 @@ nav a:hover {
 
 nav a:active {
   color: black;
+}
+
+.icon {
+	display: inline-block;
+	color: white;
+	font-size: 40px;
+	position: absolute;
+	right: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+@media (min-width: 839px) {
+	.icon {
+		display: none;
+	}
 }
 
 .img-overlay {
@@ -183,12 +224,6 @@ nav a:active {
   padding: 50px 0;
   color: #302F3D;
   word-spacing: 10px;
-}
-
-@media (min-width: 1300px) {
-	.sec-2 h2 {
-
-	}
 }
 
 .sec-2-content {
