--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,31 @@ header {
 	position: relative;
 }
 
+header:before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: #302F3D;
+	z-index: 2;
+}
+
+@media (min-width: 839px) {
+	header:before {
+		display: none;
+	}
+}
+
 .nav-logo {
 	position: absolute;
-	left: 5%;
+	padding: 15px;
+	left: 10px;
 	top: 50%;
 	transform: translateY(-50%);
+	z-index: 2;
 }
 
 @media (min-width: 839px) {
@@ -83,7 +103,7 @@ header {
 }
 
 nav {
-  display: none;
+	position: relative;
 }
 
 @media (min-width: 840px) {
@@ -93,25 +113,6 @@ nav {
 	  right: 100px;
 	  top: 50%;
 	  transform: translateY(-50%);
-	}
-}
-
-#menu-links {
-	background-color: #00B1E3;
-	position: absolute;
-	bottom: -60%;
-	z-index: 2;
-	width: 100%;
-	text-align: center;
-	padding: 10px 0;
-}
-
-@media (min-width: 840px) {
-	#menu-links {
-		background-color: transparent;
-		width: auto;
-		padding: 0;
-		bottom: auto;
 	}
 }
 
@@ -132,12 +133,78 @@ nav a:active {
   color: black;
 }
 
+#menu-links {
+	background-color: #00B1E3;
+	position: absolute;
+	bottom: -61%;
+	z-index: 1;
+	width: 100%;
+	text-align: center;
+	padding: 10px 0;
+	transform: translateY(-100%);
+	transition: transform .5s;
+}
+
+@media (min-width: 840px) {
+	#menu-links {
+		background-color: transparent;
+		width: auto;
+		padding: 0;
+		bottom: auto;
+		transform: translateY(-50%);
+		transition: none;
+	}
+}
+
+.menu-open #menu-links {
+	transform: translateY(0);
+}
+
+.ham {
+  cursor: pointer;
+  transition: transform 800ms;
+  user-select: none;
+}
+.hamRotate.active {
+  transform: rotate(45deg);
+}
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: white;
+  stroke-width: 5.5;
+  stroke-linecap: round;
+}
+
+.ham6 .top {
+  stroke-dasharray: 40 172;
+}
+.ham6 .middle {
+  stroke-dasharray: 40 111;
+}
+.ham6 .bottom {
+  stroke-dasharray: 40 172;
+}
+.ham6.active .top {
+  stroke-dashoffset: -132px;
+}
+.ham6.active .middle {
+  stroke-dashoffset: -71px;
+}
+.ham6.active .bottom {
+  stroke-dashoffset: -132px;
+}
+
 .icon {
 	display: inline-block;
 	color: white;
 	font-size: 40px;
 	position: absolute;
-	right: 20px;
+	z-index: 2;
+	right: 10px;
 	top: 50%;
 	transform: translateY(-50%);
 }
